# Mycelium

./: .env.example  .gitignore  API_README.md  Cargo.toml  Dockerfile  LICENSE.md  README.md  compose.yml  config.toml  settings.example.toml  settings.toml
.sqlx/: query-008d4cb03884c7cfd8111753ee2f95174532c2b1609965ad5a3b15a35c04401f.json  query-3dea1837a85f410404ac8b313c51ebf4c5cca670ff7e306266cb71c19c47dcca.json  query-554176f62e7b02427b41275dc3303ded411fc49eb07c7af8df1cff994362b755.json  query-5788b9870ec810e3ee07e75c3b7370b0a120c1dd7ed5ec41eac12e9a6bf5d0df.json  query-a4a386a058bb9a22de4e12ab11441b0e33d3884050e6c0bdb3577ebe2b27f783.json  query-d3096fe0128ff1a72b892956c5a861466b75164e30bdd1e8fb399934f3bf2f0c.json  query-e006b268d253dc91cc4b1cead86882b05143459eeee992acc573b21c09de7c17.json  query-f262734ad63a527a12dec5e586883eeafa1126dd7bed1df27e147b02d33345dc.json
agent/: Cargo.toml
agent/src/: main.rs
agents/: Cargo.toml
agents/src/: beacon.rs  task_executor.rs
migrations/: 20240717103619_initialize_db.sql  initialize_db.sql  initialize_db.surql  schema.sql
mycelium/: Cargo.toml
mycelium/keys/: c8297226-328e-4857-be5a-9c798f905493.pem
mycelium/src/: bin.rs  error.rs  lib.rs
mycelium/src/authentication/: agent.rs  middleware.rs
mycelium/src/model/: auth.rs  mod.rs  records.rs
mycelium/src/routes/: mod.rs
mycelium/src/routes/agent/: beacon.rs  mod.rs  tasks.rs  upload.rs
mycelium/src/routes/operator/: agents.rs  auth.rs  hosts.rs  mod.rs  tasks.rs
src/: agent.rs  auth.rs  bin.rs  config.rs  db_models.rs  error.rs  lib.rs  main.rs  model.rs  operator.rs  schema.rs  settings.rs
src/authentication/: agent.rs  jwks.rs  middleware.rs  mod.rs
src/model/: agent.rs  auth.rs  db.rs  mod.rs  records.rs
src/routes/: agent.rs  agents.rs  auth.rs  authenticated.rs  file.rs  host.rs  implants.rs  mod.rs  operator.rs  public.rs
src/routes/agent/: beacon.rs
src/routes/agents/: mod.rs  upload.rs
src/routes/operator/: files.rs
