[package]
name = "mycelium"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
uuid = { version = "1.10.0", features = ["v7", "serde"] }
axum = { version = "0.7.5", features = ["json", "query"] }
axum-macros = "0.4.1"
tokio = { version = "1.38.1", features = ["full"] }
serde = { version = "1.0.204", features = ["derive"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres", "macros", "uuid", "chrono", "ipnetwork", "_unstable-all-types"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"
serde_json = "1.0.120"
chrono = { version = "0.4.38", features = ["serde"] }
bcrypt = "0.15.1"
jsonwebtoken = { version = "9.3.0", features = ["use_pem", "pem"]}
ring = { version = "0.17.8"}
thiserror = "1.0.62"
regex = "1.10.5"
toml = "0.8.15"
lazy_static = "1.5.0"


# Uncomment it if you hate yourself
#[profile.dev.package.sqlx-macros]
#opt-level = 3

