[package]
name = "mycelium"
version = "0.1.0"
edition = "2021"

[lib]
name = "mycelium"
path = "src/lib.rs"

[[bin]]
name = "mycelium-api"
path = "src/bin.rs"

[dependencies]
dotenv = "0.15.0"
uuid = { version = "1.10.0", features = ["v7", "serde"] }
axum = { version = "0.7.5", features = ["json", "query", "multipart"] }
axum-macros = "0.4.1"
tokio = { version = "1.38.1", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["io"] }
serde = { version = "1.0.204", features = ["derive"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "ansi"] }
tracing = { version = "0.1.40", features = [] }
serde_json = "1.0.120"
chrono = { version = "0.4.38", features = ["serde"] }
bcrypt = "0.15.1"
jsonwebtoken = { version = "9.3.0", features = ["use_pem", "pem"]}
ring = { version = "0.17.8"}
thiserror = "1.0.62"
regex = "1.10.5"
toml = "0.8.15"
lazy_static = "1.5.0"
tokio-postgres = { version = "0.7.11", features = ["with-uuid-1", "with-chrono-0_4", "with-serde_json-1"] }
postgres-types = { version = "0.2.7", features = ["derive"] }
futures = "0.3.30"


