[package]
name = "agent"
description = """
Rudimentary C2 Agent designed to test the communication between the target and the team server.
"""
version = "0.1.0"
edition = "2021"

[dependencies]
mycelium = { path = ".." }
reqwest = { version = "0.12.5", features = ["json", "blocking"] }
thermite = { git = "https://github.com/Red4mber/Thermite" }
ntapi = "0.4.1"


[profile.dev]
debug = false
lto = true
opt-level = "s"
overflow-checks = false
strip = "symbols"
debug-assertions = false
#panic="abort"
rpath = false