[package]
name = "agent"
description = """
Rudimentary C2 Agent designed to test the communication between the target and the team server.
"""
version = "0.1.0"
edition = "2021"

[dependencies]
mycelium = { path = ".." }
thermite = { git = "https://github.com/Red4mber/Thermite" }
reqwest = { version = "0.12.5", features = ["json", "blocking"] }
ntapi = "0.4.1"
serde_json = "1.0.120"

[profile.dev]
debug = false
lto = true
opt-level = "s"
overflow-checks = false
strip = "symbols"
debug-assertions = false
#panic="abort"
rpath = false