[package]
name = "mycelium-agent"
description = """
"""
version = "0.1.0"
edition = "2021"

[[bin]]
name = "simple-beacon"
path = "src/beacon.rs"

[[bin]]
name = "task-executor"
path = "src/task_executor.rs"

[dependencies]
thermite = { git = "https://github.com/Red4mber/Thermite" }
reqwest = { version = "0.12.5", features = ["json", "blocking"] }
serde = { version = "1.0.204", features = ["derive"] }

# Some optimizations for a smaller binary
[profile.release]
debug = false
lto = true
opt-level = "s"
overflow-checks = false
strip = "symbols"
debug-assertions = false
rpath = false

