[package]
name = "mycelium"
version = "0.1.0"
description = """


"""
edition = "2021"

[lib]
name = "mycelium"
path = "src/lib.rs"

[[bin]]
name = "mycelium-api"
path = "src/bin.rs"

[dependencies]
dotenv = "0.15.0"
axum = { version = "0.7.5", features = ["json", "query", "multipart"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
serde_with = "3.9.0"
tokio = { version = "1.38.1", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["io"] }
tracing = { version = "0.1.40", features = [] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "ansi"] }
uuid = { version = "1.10.0", features = ["v7", "serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
jsonwebtoken = { version = "9.3.0", features = ["use_pem", "pem"]}
thiserror = "1.0.62"
regex = "1.10.5"
toml = "0.8.15"
futures = "0.3.30"
rand = "0.8.5"
rsa = "0.9.6"
base64 = "0.22.1"
glob = "0.3.1"

[dev-dependencies]
axum-macros = "0.4.1"


[dependencies.surrealdb]
git = "https://github.com/surrealdb/surrealdb"
rev = "2b1e6a3"
#features = ["default", ]
#version = "2.0.0-alpha7"